--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
               env:
                   ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
                   ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
-                  IMAGE_TAG: latest
+                  IMAGE_TAG: ${{ github.sha }}
               run: |
                   # Build a Docker container
                   docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
