--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,8 @@ jobs:
                   IMAGE_TAG: latest
               run: |
                   # Build a Docker container
-                  docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+                  echo $ECR_REGISTRY/$ECR_REPOSITORY
+                  docker build -t $ECR_REGISTRY/$ECR_REPOSITORY .
                   # Push it to ECR
-                  docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+                  docker push $ECR_REGISTRY/$ECR_REPOSITORY
                   echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
