--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
               id: build-image
               env:
                   ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-                  ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+                  ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
                   IMAGE_TAG: latest
               run: |
                   # Build a Docker container
