--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,7 +56,7 @@ jobs:
               run: |
                   # Build a Docker container
                   echo $ECR_REGISTRY/$ECR_REPOSITORY
-                  docker build -t $ECR_REGISTRY/$ECR_REPOSITORY .
+                  docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
                   # Push it to ECR
-                  docker push $ECR_REGISTRY/$ECR_REPOSITORY
+                  docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
                   echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
